# falcon-9-simulation

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  Notes  Notes.odt  README.md  TODO  TODO.txt  imgui.ini  install_deps.sh  tags  tags.temp  telemetry.txt
simulation/: CMakeLists.txt
simulation/include/: FlightComputer.h  Simulation.h  System.h
simulation/include/Falcon9/: Falcon9_Vehicle.h  Falcon9_Vehicle.h.orig
simulation/src/: FlightComputer.cpp  Simulation.cpp  Simulation.cpp.orig  System.cpp  main.cpp
simulation/src/Falcon9/: Falcon9_Vehicle.cpp  Falcon9_Vehicle.cpp.orig
src/: CMakeLists (copy).txt.backup  CMakeLists.txt  F9Simulation.cpp  F9Simulation.h  Simulation.cpp  Simulation.h  Visualisation.cpp  Visualisation.h  definitions.h  example.cpp  main.cpp  main_old.cpp
src/Graphics/: GraphicalShell.cpp  GraphicalShell.h  Visualisation.cpp  Visualisation.h
src/Graphics/GUI/: GUILayer.cpp  GUILayer.h  UIUtils.hpp
src/Graphics/Overlay/: CoordFrameOverlay.cpp  CoordFrameOverlay.h  Graph.cpp  Graph.h  Marker2DOverlay.cpp  Marker2DOverlay.h  Overlay2D.cpp  Overlay2D.h  UILayer.cpp  UILayer.h  VehicleOverlay.cpp  VehicleOverlay.h
src/Graphics/Simulation_model/: ISimulationModel.hpp  ModelKeyFrame.cpp  ModelKeyFrame.h  SimpleCameraState.hpp  SimulationModel.cpp  SimulationModel.h  SimulationModelLayer.cpp  SimulationModelLayer.h
src/Graphics/Simulation_model/Cameras/: AllCameras.cpp  AllCameras.h  CameraSystem.cpp  CameraSystem.h
src/Graphics/Simulation_model/Lighting/: LightSystem.cpp  LightSystem.h
src/Graphics/Simulation_model/Models/: ASDSModel.cpp  ASDSModel.h  AllComponentMeshes.cpp  AllComponentMeshes.h  EarthModel.cpp  EarthModel.h  EngineMesh.cpp  EngineMesh.h  ExhaustJet.cpp  ExhaustJet.h  F9S1Model.cpp  F9S1Model.h  F9S2Model.cpp  F9S2Model.h  GasThrusterMesh.cpp  GasThrusterMesh.h  GridFinMesh.cpp  GridFinMesh.h  GroundModel.cpp  GroundModel.h  IStageComponentMesh.hpp  LandingLegMesh.cpp  LandingLegMesh.h  OBJModel.hpp  TankModel_temp.hpp
src/Graphics/Simulation_model/Models/Falcon_9/: F9Model.cpp  F9Model.h  Falcon9Model.cpp  Falcon9Model.h  S1RP1TankModel.hpp
src/Input/: HWEventReceiver.cpp  HWEventReceiver.h  MasterEventReceiver.h
src/Physics/: DynamicSimState.cpp  DynamicSimState.h  IDataSource.hpp  SimState.cpp  SimState.h  Simulation.cpp  Simulation.h  StaticSimState.cpp  StaticSimState.h  System.cpp  System.h
src/Physics/Hardware/Common/Avionics/: Accelerometer.cpp  Accelerometer.h  Gyroscope.cpp  Gyroscope.h  IMU.h  InertialNavSystem.h  Sensor.cpp  Sensor.h
src/Physics/Hardware/Common/Core/: ILaunchVehicle.cpp  ILaunchVehicle.h  IStage.cpp  IStage.h  IStageComponent.hpp  StageComponent.hpp  StageComponentGroup.cpp  StageComponentGroup.h
src/Physics/Hardware/Common/Propellant/: Fluid.cpp  Fluid.h  FluidTank.cpp  FluidTank.h  FluidTankGroup.cpp  FluidTankGroup.h  SupplyLine.cpp  SupplyLine.h
src/Physics/Hardware/Common/Propulsion/: Engine.cpp  Engine.h  GasThruster.cpp  GasThruster.h  IThrustGenerator.cpp  IThrustGenerator.h  TVCActuator.cpp  TVCActuator.h  ThrustGeneratorGroup.cpp  ThrustGeneratorGroup.h
src/Physics/Hardware/Falcon_9/: Falcon9.cpp  Falcon9.h
src/Physics/Hardware/Falcon_9/Stage_1/: Falcon9Stage1.cpp  Falcon9Stage1.h  Merlin1D.cpp  Merlin1D.h
src/Physics/Hardware/Falcon_9/Stage_2/: FairingHalf.cpp  FairingHalf.h  Falcon9Stage2.cpp  Falcon9Stage2.h  (+4 more)
src/graphics/: ISerialisable.hpp  Visualisation.cpp  Visualisation.h
src/graphics/GUI/: GUILayer.cpp  GUILayer.h
src/graphics/Simulation_model/: Falcon9Keyframe.cpp  Falcon9Keyframe.h  SimulationModel.cpp  SimulationModel.h
src/graphics/Simulation_model/Cameras/: AllCameras.cpp
src/graphics/Simulation_model/Lighting/: LightSystem.h
src/graphics/Simulation_model/Models/: GroundModel.cpp  GroundModel.h
src/graphics/gui/: GUILayer.h  UIUtils.hpp
src/graphics/simulation_model/: Falcon9Keyframe.cpp  Falcon9Keyframe.h  SimulationModel.cpp  SimulationModel.h
src/graphics/simulation_model/cameras/: AllCameras.cpp  CameraSystem.cpp
src/graphics/simulation_model/lighting/: LightSystem.cpp
src/graphics/simulation_model/models/: GroundModel.cpp  OBJModel.hpp
src/input/: HWEventReceiver.h  MasterEventReceiver.cpp
src/physics/: IDataSource.hpp  Simulation.cpp  Simulation.h  System.cpp  System.h
src/simulation/: CMakeLists.txt  Simulation.cpp  Simulation.h
src/testSubdir/: CMakeLists.txt  someCpp.cpp  someCpp.h
src/util/: CSVUtils.hpp
src/visualisation/: Animation.h  AnimationFrame.h  CMakeLists.txt  GUI.cpp  GUI.h  VertFlipScreenQuad.cpp  Visualisation.cpp  Visualisation.h
src/visualisation/graphics/gui/: GUI.cpp  GUI.h
src/visualisation/input/: HWEventReceiver.cpp  HWEventReceiver.h  MasterEventReceiver.cpp  MasterEventReceiver.h
src/visualisation/simulation_model/: CameraSystem.cpp  CameraSystem.h  HighPrecisionSceneNode.h  Scene.cpp  Scene.h  SimulationModel.cpp  SimulationModel.h
src/visualisation/simulation_model/cameras/: CameraBaseState.h  CameraSystem.cpp  CameraSystem.h  FPVCamera.c  FPVCamera.cpp  FPVCamera.h
tests/: CMakeLists.txt  test_Animation.cpp  test_CameraSystem.cpp  test_FPVCamera.cpp  test_History.cpp  test_Simulation.cpp  test_main.cpp
visualisation/: CMakeLists.txt
visualisation/include/: Animation.h  AnimationFrame.h  Application.h  CameraBaseState.h  CameraSystem.h  Cameras.h  FPVCamera.h  GUI.h  HWEventReceiver.h  History.h  Input.h  MasterEventReceiver.h  Mesh.h  MountedCamera.h  OBJModel.h  Scene.h  ShaderUtils.h  SimulationModel.h  StateSnapshot.h  Transform.h  VertFlipScreenQuad.h  Visualisation.h  Window.h
visualisation/resources/shaders/: f_square.sc  rebuild_shaders.sh  v_square.sc
visualisation/src/: Animation.cpp  AnimationFrame.cpp  Application.cpp  CameraSystem.cpp  Cameras.cpp  FPVCamera.cpp  GUI.cpp  History.cpp  Input.cpp  MasterEventReceiver.cpp  Mesh.cpp  MountedCamera.cpp  OBJModel.cpp  Scene.cpp  Scene.cpp.orig  ShaderUtils.cpp  SimulationModel.cpp  StateSnapshot.cpp  StateSnapshot.cpp.orig  Visualisation.cpp  Window.cpp  helloworld.cpp  main.cpp  main_old.cpp
(+92 files in other folders)
